--- a/r2-shared/build.gradle
+++ b/r2-shared/build.gradle
@@ -39,10 +39,9 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation "androidx.appcompat:appcompat:1.3.0-beta01"
+    implementation "androidx.appcompat:appcompat:1.3.0-rc01"
     implementation "com.github.kittinunf.fuel:fuel-android:2.2.2"
     implementation "com.github.kittinunf.fuel:fuel:2.2.2"
-    implementation "com.google.code.gson:gson:2.8.6"
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "joda-time:joda-time:2.10.5"
     implementation "nl.komponents.kovenant:kovenant-android:3.3.0"
@@ -53,6 +52,7 @@ dependencies {
     implementation "nl.komponents.kovenant:kovenant:3.3.0"
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    implementation "org.jsoup:jsoup:1.13.1"
 
     testImplementation "androidx.test.ext:junit-ktx:1.1.2"
     testImplementation "androidx.test:core-ktx:1.3.0"
